chore: add cdi dependency to run microstream data
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>