@@ -16,9 +16,28 @@
         <mockito.verson>4.5.1</mockito.verson>
         <assertj.version>3.24.2</assertj.version>
         <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <microstream.data.version>0.0.2</microstream.data.version>
+        <argLine> --add-opens java.base/java.lang=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED </argLine>
+        <weld.se.core.version>5.1.0.Final</weld.se.core.version>
+        <smallrye.config.version>3.1.1</smallrye.config.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.smallrye.config</groupId>
+            <artifactId>smallrye-config</artifactId>
+            <version>${smallrye.config.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-core</artifactId>
+            <version>${weld.se.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>expert.os.integration</groupId>
+            <artifactId>microstream-jakarta-data</artifactId>
+            <version>${microstream.data.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -60,4 +79,27 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>jakarta.sonatype.org-snapshot</id>
+            <url>https://jakarta.oss.sonatype.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>oss.sonatype.org-snapshot</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
